c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_parse/extra_credit/label_inside_struct_decl.c
/* Labels can't appear inside structure declarations */

struct s {
    int i;
    // NOTE: GCC and clang will treat foo as a bit-field (a feature we aren't
    // implementing. If you implement bit-fields, this is still a parse error
    foo : int j;
};

int main(void) {
    return 0;
}